# fractopo

./: .codespellrc  .copier-answers.yml  .editorconfig  .envrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  LICENSE.md  MANIFEST.in  PLAN.md  Pipfile  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  branches_and_nodes.ipynb  default.nix  dodo.py  environment.yaml  environment.yml  f_improved.prof  flake.nix  importanize.ini  noxfile.py  per-system.nix  pre-commit.nix  pylama.ini  pyproject.toml  pytest.ini  requirements-conda.txt  requirements-dev.txt  requirements.txt  result  (+5 more)
.github/workflows/: codeql-analysis.yml  conda.yaml  conda.yml  docs.yaml  lint.yaml  main.yaml  nix.yaml  test-and-publish-doit.yaml  test-and-publish.yaml  test.yaml
conda/: environment.yml
docs/: .buildinfo  branches_and_nodes.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/.doctrees/: branches_and_nodes.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_sources/: branches_and_nodes.md.txt  index.md.txt  installation.md.txt
docs/analysis/: basics.html  contour.html  index.html
docs/apidoc/: fractopo.analysis.analysis_and_plotting.html  fractopo.analysis.anisotropy.html  fractopo.analysis.azimuth.html  fractopo.analysis.config.html  fractopo.analysis.general.html  fractopo.analysis.html  fractopo.analysis.length_distributions.html  fractopo.analysis.line_data.html  fractopo.analysis.main.html  fractopo.analysis.multiple_target_areas.html  fractopo.analysis.network.html  fractopo.analysis.parameters.html  fractopo.analysis.relationships.html  fractopo.analysis.target_area.html  fractopo.analysis.tools.html  fractopo.branches_and_nodes.html  fractopo.cli.html  fractopo.contour_grid.html  fractopo.fractopo_utils.html  fractopo.general.html  fractopo.html  fractopo.tval.executor.html  fractopo.tval.html  fractopo.tval.proximal_traces.html  fractopo.tval.trace_builder.html  fractopo.tval.trace_validator.html  geotrans.html  modules.html
docs/notebooks/: fractopo_network_1.html  fractopo_network_1.ipynb
docs/usage/: python.html
docs/validation/: basics.html  errors.html
docs_src/: BingSiteAuth.xml  analysis.rst  branches_and_nodes.md  conf.py  index.md  index.rst  installation.md  misc.rst  requirements-dev.txt  requirements.txt  robots.txt  usage.md
docs_src/_templates/: layout.html
docs_src/analysis/: basics.md  basics.rst  topological_branches_and_nodes.rst
docs_src/apidoc/: fractopo.analysis.analysis_and_plotting.rst  fractopo.analysis.azimuth.rst  fractopo.analysis.contour_grid.rst  fractopo.analysis.general.rst  fractopo.analysis.line_data.rst  fractopo.analysis.multi_network.rst  fractopo.analysis.multiple_target_areas.rst  fractopo.analysis.network.rst  fractopo.analysis.random_sampling.rst  fractopo.analysis.rst  fractopo.analysis.subsampling.rst  fractopo.analysis.target_area.rst  fractopo.analysis.tools.rst  fractopo.branches_and_nodes.rst  fractopo.cli.rst  fractopo.contour_grid.rst  fractopo.fractopo_utils.rst  fractopo.interop.rst  fractopo.rst  fractopo.tval.executor.rst  fractopo.tval.proximal_traces.rst  fractopo.tval.rst  fractopo.tval.trace_builder.rst  fractopo.tval.trace_validation.rst  fractopo.tval.trace_validation_utils.rst  fractopo.tval.trace_validator.rst  fractopo.tval.trace_validators.rst  modules.rst
docs_src/guides/: how_to_digitize_fractures_and_lineaments.rst  how_to_use_fractopo_web_interface.rst
docs_src/imgs/: Backup_of_MultiJunctionValidator.cdr  Backup_of_MultipleCrosscutValidator.cdr  Backup_of_SharpCornerValidator.cdr  Backup_of_SimpleGeometryValidator.cdr  Backup_of_TargetAreaSnapValidator.cdr  Backup_of_UnderlappingSnapValidator.cdr  Backup_of_VNodeValidator.cdr  MultiJunctionValidator.cdr  MultipleCrosscutValidator.cdr  SharpCornerValidator.cdr  SimpleGeometryValidator.cdr  (+4 more)
examples/: README.rst  example_data.py  example_networks.py  fractopo_network_1.py  fractopo_workflow_visualisation.py  fractopo_workflow_visualization.py  make_kb11_network.py  plot_automatic_azimuth_set_detection.py  plot_azimuth_set_relationships.py  plot_branches_and_nodes.py  plot_data.py  plot_exported_trace_attributes.py  plot_fractopo_workflow_visualisation.py  plot_fractopo_workflow_visualization.py  plot_length_distributions.py  plot_multi_network_parameters.py  plot_multi_scale_networks.py  plot_numerical_parameters.py  plot_optimized_multi_scale.py  plot_rose_plot.py  plot_set_visualization.py  plot_ternary_plots.py  plot_validation_errors.py  result-doc
fractopo/: __init__.py  __main__.py  _version.py  branches_and_nodes.py  cli.py  contour_grid.py  fractopo_utils.py  general.py  typing.py
marimos/: api.py  conftest.py  network.py  utils.py  validation.py
nix/: ci.nix  default.nix  overlay.nix  overlays.nix  package.nix  per-system.nix
notebooks/: Inkoo_All_Analysis.ipynb  Inkoo_infinity_subsampled.ipynb  Inkoo_length_scale_relations.ipynb  Inkoo_length_scales.ipynb  Kopparnas_EW_split_analysis.ipynb  MultiJunctionValidator.ipynb  Run_All_Analysis.ipynb  Speed_test.ipynb  Untitled.ipynb  branches_and_nodes.ipynb  fractopo_network.ipynb  inkoo_infinity.ipynb  sample_gridding.ipynb  testing_area_underlapping.ipynb  testing_datasets-OG.ipynb  testing_datasets.ipynb  testing_exponent_nonsense.ipynb  testing_geometries.ipynb  testing_splits.ipynb  testing_splitting-Copy1.ipynb  testing_splitting.ipynb  tests.ipynb  validation_Ahvenanmaa_geta_infinity_lineaments.ipynb  validation_base.ipynb
paper/: allrefs.bib  compile.sh  getbib.lua  getbib.sh  paper.bib  paper.md  refs.bib
scripts/: cog_copy_readme.py
tests/: __init__.py  _profile.py  _profile.py.tmpl  conftest.py  profile_runtime.py  test_branches_and_nodes.py  test_cli.py  test_config.py  test_executor.py  test_fractopo_utils.py  test_fracture_analysis_kit.py  test_general.py  test_main.py  test_trace_builder.py  test_trace_classes.py  trace_builder.py
(+336 files in other folders)
