[tool.poetry]
name = "fractopo"
version = "0.2.2.post19.dev0+9c386cd"
description = "Fracture Network Analysis"
authors = ["nialov <nikolasovaskainen@gmail.com>"]
readme = "README.rst"
license = "MIT"
# Make sure hyphens/underscores are correct in urls
homepage = "https://github.com/nialov/fractopo"
repository = "https://github.com/nialov/fractopo"
documentation = "https://fractopo.readthedocs.io/en/latest/"
# For inspiration: https://pydigger.com/keywords
keywords = [
    "data",
    "gis",
    "geology",
    "fracture",
    "topology",
]
# See https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only"
]
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
tracevalidate = "fractopo.cli:tracevalidate_click"
fractopo = "fractopo.cli:app"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nialov/fractopo/issues"

[tool.poetry.dependencies]
python = "^3.7.1"
geopandas = "==0.9.0"
pygeos = "==0.10.1"
pandas = "~1.3"
shapely = "~1.7"
numpy = "*"
scipy = "*"
powerlaw = "*"
python-ternary = "*"
scikit-learn = "*"
seaborn = "*"
matplotlib = "*"
click = "*"
descartes = "*"
rich = "^10.7.0"
typer = "^0.3.2"
# Logging
nialog = {version = "^0.0.2", optional = true}

# Extras
# Coverage
coverage = {version = "^5.0", optional = true}
coverage-badge = {version = "*", optional = true}

# Docs
sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
nbsphinx = {version = "*", optional = true}
sphinx-gallery = {version = "*", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}

# Linting and formatting
pylint = {version = "*", optional = true}
rstcheck = {version = "*", optional = true}
black = {version = "*", optional = true}
black-nb = {version = "*", optional = true}
blacken-docs = {version = "*", optional = true}
blackdoc = {version = "*", optional = true}
isort = {version = "*", optional = true}

# Typecheck
mypy = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
hypothesis = "*"
invoke = "*"
ipython = "*"
jupyterlab = "*"
nox = "*"
pyinstrument = "*"
pytest = "*"
pytest-regressions = "*"

[tool.poetry.extras]
logging = ["nialog"]
coverage = ["coverage", "coverage-badge"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "sphinx-gallery",
    "sphinx-autodoc-typehints"
]
format-lint = [
    "pylint",
    "rstcheck",
    "sphinx",
    "black",
    "black-nb",
    "isort",
    "blacken-docs",
    "blackdoc"
]
typecheck = ["mypy"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "*.py",
    "*/__init__.py",
    "*/__version__.py",
    "*/_version.py",
    "./CITATION.cff",
]
patterns = [
    "(^__version__\\s*=\\s*['\"])[^'\"]*(['\"])",
    "(^version:\\s*['\"])[^'\"]*(['\"])",
]

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "fractopo",
    ]
addopts = "--doctest-modules --pdbcls=IPython.terminal.debugger:Pdb"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[
    "ignore:invalid value encountered in true_divide:RuntimeWarning",
    "ignore:The Shapely GEOS version :UserWarning",
    "ignore:invalid value encountered in double_scalars:RuntimeWarning",
    "ignore:Mean of empty slice:RuntimeWarning",
    "ignore:Degrees of freedom :RuntimeWarning",
    "ignore:divide by zero encountered in double_scalars:RuntimeWarning",
    "ignore:This method will be removed in future versions:DeprecationWarning",
    "ignore:The default dtype for empty Series will be:DeprecationWarning",
    "ignore:All-NaN slice encountered:RuntimeWarning",
    ]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["fractopo", "tests"]

[tool.pylint.master]
fail-under = "9.5"

[tool.pylint.report]
output-format = "text"

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",
    "C0302",
    "R0902",
    "R0913",
    "R0914",
    "R1735",
    "W0212",
    "W0621",
    "W0703",
    "W1203",
    ]

[tool.pylint.similarities]
ignore-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
